SFDCProject/src/objects/Sync_Record__c.object
<CustomObject>
    <description>Many times when a record is modified, it needs to be synced to other places and we need to capture the status of the sync status and details for analysis or troubleshooting. If a record needs to be synced to multiple places, then we would end up in creating multiple fields in source object. Also sometimes we will not be able to update the object back due to various reasons. This object helps to keep track of such records and helps update the status with details.</description>
    <fields>
        <fullName>Action__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Indicates the action which this sync job does, within the module. for ex, ContractsSync or GetAccountTitleDetails etc,</inlineHelpText>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Log</label>
        <referenceTo>App_Log__c</referenceTo>
        <relationshipLabel>Sync Records</relationshipLabel>
        <relationshipName>Sync_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <inlineHelpText>Indicates the number of attempts that are tried to process this record.</inlineHelpText>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Until_Time__c</fullName>
        <inlineHelpText>If this datetime is set, record will not be picked up till this datetime has been passed.</inlineHelpText>
        <label>Delay Until Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deletes__c</fullName>
        <inlineHelpText>This is number of records Deleted during processing of this sync record. It could be null for non applicable use cases.</inlineHelpText>
        <label>Deletes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <inlineHelpText>When we process a record and sync to external system, if that translates to an id, that could be persisted here.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inserts__c</fullName>
        <inlineHelpText>This is number of records inserted during processing of this sync record. It could be null for non applicable use cases.</inlineHelpText>
        <label>Inserts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <inlineHelpText>Short message associated with processing the record. In case of exceptions this would contain the exception message.</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Module to which this sync record associated with. For ex., &apos;AwsSqsSync&apos; or &apos;CoreLogicSync&apos;</inlineHelpText>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Time__c</fullName>
        <formula>(LastModifiedDate - CreatedDate) * 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the time difference between Created date and record last modified, in seconds. As Sync records are not updated once processed, we are using this to measure time taken to complete processing record.</inlineHelpText>
        <label>Processing Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>The record to which this sync queue record tracks.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <formula>If(Not(IsBlank(Record_Id__c)), HYPERLINK(&apos;/&apos; + Record_Id__c, Record_Id__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Payload__c</fullName>
        <inlineHelpText>If this request needs any additional information for processing, it could be specified here.</inlineHelpText>
        <label>Request Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Payload__c</fullName>
        <inlineHelpText>This field could be used to store any response payload.</inlineHelpText>
        <label>Response Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sobject__c</fullName>
        <label>Sobject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The status of the sync.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Synced</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <inlineHelpText>Any status that can be specified by the job specific logic. This is usually applicable if main status is Sync Not Applicable.</inlineHelpText>
        <label>Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <inlineHelpText>Sub Type that can be used to communicate any use case specific information.</inlineHelpText>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Indicates the type of change in source records. Insert or Update or Delete</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updates__c</fullName>
        <inlineHelpText>This is number of records updated during processing of this sync record. It could be null for non applicable use cases.</inlineHelpText>
        <label>Updates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <inlineHelpText>Some times we need to store additional parameters and this field can be used to store such parameters.</inlineHelpText>
        <label>Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sync Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Attempts__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>Processing_Time__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sobject__c</field>
            <operation>contains</operation>
            <value>Account</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Aws_Contracts_Sync</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>AwsSqsSync</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>ContractsSync</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sync Error</value>
        </filters>
        <label>All Aws Contracts Sync</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Aws_Record_Id_Search</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>AwsSqsSync</value>
        </filters>
        <filters>
            <field>Record_Id__c</field>
            <operation>startsWith</operation>
            <value>0063200001lcT3QAAU</value>
        </filters>
        <label>All Aws Record Id Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Aws_Sync</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>AwsSqsSync</value>
        </filters>
        <label>All Aws Sync</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Aws_Sync_Errors</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>AwsSqsSync</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sync Error</value>
        </filters>
        <label>All Aws Sync Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Aws_Sync_To_Be_Synced</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To Be Synced</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>AwsSqsSync</value>
        </filters>
        <label>All Aws Sync To Be Synced</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Attempts__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>App_Log__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Inserts__c</columns>
        <columns>Updates__c</columns>
        <columns>Deletes__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <label>All Calendar Sync</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync_Errors</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sync Error</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <label>All Calendar Sync Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync_Failed</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sync Failed</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <label>All Calendar Sync Failed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync_Google_to_Sfdc</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Attempts__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>App_Log__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Inserts__c</columns>
        <columns>Updates__c</columns>
        <columns>Deletes__c</columns>
        <columns>Message__c</columns>
        <columns>Processing_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>GoogleToSfdcSync</value>
        </filters>
        <label>All Calendar Sync Google to Sfdc</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync_Google_to_Sfdc_Errors</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sync Error</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>GoogleToSfdcSync</value>
        </filters>
        <label>All Calendar Sync Google to Sfdc Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync_Search</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Attempts__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>App_Log__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Inserts__c</columns>
        <columns>Updates__c</columns>
        <columns>Deletes__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <filters>
            <field>Value1__c</field>
            <operation>equals</operation>
            <value>staccato.clarida@sunrunhome.com</value>
        </filters>
        <label>All Calendar Sync Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync_Sfdc_to_Google_Errors</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sync Error</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>SfdcToGoogleSync</value>
        </filters>
        <label>All Calendar Sync Sfdc to Google Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_Sync_Sfdc_to_Google_NA</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sync Not Applicable</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>SfdcToGoogleSync</value>
        </filters>
        <label>All Calendar Sync Sfdc to Google NA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Calendar_To_Be_Synced</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Value1__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Sobject__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until_Time__c</columns>
        <columns>Message__c</columns>
        <columns>App_Log__c</columns>
        <columns>External_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To Be Synced</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync</value>
        </filters>
        <label>All Calendar To Be Synced</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SYR-{0000000000}</displayFormat>
        <label>Sync Record#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>